Fix some crashes and bugs in the visible audio control.

--- a/abcjs-audio.css
+++ b/abcjs-audio.css
@@ -117,7 +117,7 @@
 	border-radius: 2px;
 	border: none;
 	margin: 0 2px 0 4px;
-	width: 35px;
+	width: 42px;
 	padding-left: 2px;
 	box-sizing: border-box;
 }
